report.html target added

--- a/src/Makefile
+++ b/src/Makefile
@@ -61,10 +61,11 @@ H_SUBJECT_RNO       =   backend/subject-wise-rollno.h
 H_ARRANGE_RNO       =   backend/arrange-rollno.h
 H_READ_INPUT        =   backend/read-input.h
 H_EXPAND_RNO        =   backend/expand-rollno.h
-H_SUBEJECT          =   $(H_READ_INPUT) $(H_ARRANGE_RNO) $(H_EXPAND_RNO) $(H_SUBJECT_RNO)
+H_SUBJECT           =   $(H_READ_INPUT) $(H_ARRANGE_RNO) $(H_EXPAND_RNO) $(H_SUBJECT_RNO)
 H_STRATEGY          =   strategy.h $(H_DETAILS) $(H_SUBJECT) 
 H_VALIDATION        =   validation.h $(H_DETAILS)
 H_EXAMDETAIL        =   examdetail.h $(H_DETAILS)
+H_REPORT            =   report.h $(H_DETAILS)
 
 # ====================================================================
 #	Variables for definition files (CC_FILENAME)
@@ -86,6 +87,7 @@ CC_ROOMDETAIL       =   roomdetail.cc
 CC_STRATEGY         =   strategy.cc
 CC_VALIDATION       =   validation.cc
 CC_EXAMDETAIL       =   examdetail.cc
+CC_REPORT           =   report.cc
 
 # ====================================================================
 #	Variables for main method files (M_FILENAME)
@@ -107,6 +109,7 @@ M_GETCOOKIE         =   getcookies.cpp
 M_STRATEGY          =   strategy-main.cpp
 M_VALIDATION        =   validation-main.cpp
 M_EXAMDETAIL        =   examdetail-main.cpp
+M_REPORT            =   report-main.cpp
 
 # ====================================================================
 #	Variables for object files
@@ -134,6 +137,7 @@ O_READ_INPUT        =   backend/read-input.o
 O_STRATEGY_BACKEND  =   backend/strategy.o
 O_SEATPLAN          =   backend/seatplan.o $(O_STRATEGY_BACKEND)
 O_EXAMDETAIL        =   examdetail.o
+O_REPORT            =   report.o
 
 # Object files of main files
 
@@ -153,6 +157,7 @@ O_GETCOOKIE_MAIN    =   getcookies.o
 O_STRATEGY_MAIN     =   strategy-main.o
 O_VALIDATION_MAIN   =   validation-main.o
 O_EXAMDETAIL_MAIN   =   examdetail-main.o
+O_REPORT_MAIN       =   report-main.o
 
 # ====================================================================
 #	Linking Variables (L_EXE_FILENAME)
@@ -169,7 +174,8 @@ L_ROOMDETAIL    =   $(L_DETAILS) $(O_ROOMDETAIL)
 L_SUBJECT       =   $(O_READ_INPUT) $(O_EXPAND_RNO) $(O_ARRANGE_RNO) $(O_SUBJECT_RNO)
 L_STRATEGY      =   $(L_DETAILS) $(O_STRATEGY) $(L_SUBJECT)
 L_VALIDATION    =   $(L_DETAILS) $(O_VALIDATION) $(O_SEATPLAN)
-L_EXAMDETAIL    =   $(L_DETAILS) $(O_EXAMDETAIL) 
+L_EXAMDETAIL    =   $(L_DETAILS) $(O_EXAMDETAIL)
+L_REPORT        =   $(L_DETAILS) $(O_REPORT) backend/room-report.o
 
 # Linking of main files
 
@@ -189,6 +195,7 @@ L_GETCOOKIE     =   $(L_LOGIN) $(O_GETCOOKIE_MAIN)
 L_STRATEGY_M    =   $(L_STRATEGY) $(O_STRATEGY_MAIN)
 L_VALID         =   $(L_VALIDATION) $(O_VALIDATION_MAIN)
 L_EXAM          =   $(L_EXAMDETAIL) $(O_EXAMDETAIL_MAIN)
+L_REPORT_M      =   $(L_REPORT) $(O_REPORT_MAIN)
 
 # ====================================================================
 # 	O/P file names(exe) (E_FILENAME)
@@ -210,12 +217,13 @@ E_GETCOOKIE     =   getcookie.html
 E_STRATEGY      =   strategy.html
 E_VALIDATION    =   validation.html
 E_EXAMDETAIL    =   examdetail.html
+E_REPORT        =   report.html
 
 # ====================================================================
 #	Main target (1st target)
 # ====================================================================
 
-all: back $(E_JAVASCRIPT) $(E_LOGIN) $(E_TOTALCLASSES) $(E_CLASSINFO) $(E_PROJECTDETAIL) $(E_REGISTER) $(E_NEWUSER) $(E_ROLLNO) $(E_TOTALCENTRE) $(E_CENTREDETAIL) $(E_ROOM) $(E_GETCOOKIE) $(E_LOGOUT) $(E_STRATEGY) $(E_VALIDATION) $(E_EXAMDETAIL)
+all: back $(E_JAVASCRIPT) $(E_LOGIN) $(E_TOTALCLASSES) $(E_CLASSINFO) $(E_PROJECTDETAIL) $(E_REGISTER) $(E_NEWUSER) $(E_ROLLNO) $(E_TOTALCENTRE) $(E_CENTREDETAIL) $(E_ROOM) $(E_GETCOOKIE) $(E_LOGOUT) $(E_STRATEGY) $(E_VALIDATION) $(E_EXAMDETAIL) $(E_REPORT)
 
 # ====================================================================
 #   Target for compiling files in backend folder
@@ -276,6 +284,9 @@ $(O_VALIDATION): $(CC_VALIDATION) $(H_VALIDATION)
 $(O_EXAMDETAIL): $(CC_EXAMDETAIL) $(H_EXAMDETAIL)
 	$(CC) $(CFLAG) $(CC_EXAMDETAIL) $(LMYSQL)
 
+$(O_REPORT): $(CC_REPORT) $(H_REPORT)
+	$(CC) $(CFLAG) $(CC_REPORT) $(LMYSQL)
+
 # Compiling Mian files
 
 $(O_JAVASCRIPT_MAIN): $(M_JAVASCRIPT) $(H_JAVASCRIPT)
@@ -318,13 +329,16 @@ $(O_GETCOOKIE_MAIN): $(M_GETCOOKIE) $(H_LOGIN)
 	$(CC) $(CFLAG) $(M_GETCOOKIE) $(LMYSQL)
 	
 $(O_STRATEGY_MAIN): $(M_STRATEGY) $(H_STRATEGY)
-	$(CC) $(CFLAG) -Wl,--stack,8488608 $(M_STRATEGY) $(LMYSQL) # --main-stacksize=8488608
+	$(CC) $(CFLAG) $(M_STRATEGY) $(LMYSQL) # --main-stacksize=8488608
 
 $(O_VALIDATION_MAIN): $(M_VALIDATION) $(H_VALIDATION)
 	$(CC) $(CFLAG) $(M_VALIDATION) $(LMYSQL)
 
 $(O_EXAMDETAIL_MAIN): $(M_EXAMDETAIL) $(H_EXAMDETAIL)
 	$(CC) $(CFLAG) $(M_EXAMDETAIL) $(LMYSQL)
+
+$(O_REPORT_MAIN): $(M_REPORT) $(H_REPORT)
+	$(CC) $(CFLAG) $(M_REPORT) $(LMYSQL)
 
 # ====================================================================
 # 	Targets of o/p files(exe)
@@ -383,6 +397,9 @@ $(E_VALIDATION): $(L_VALID)
 
 $(E_EXAMDETAIL): $(L_EXAM)
 	$(CC) $(OFLAG) $(E_EXAMDETAIL) $(L_EXAM) $(LCGICC) $(LMYSQL)
+
+$(E_REPORT): $(L_REPORT_M)
+	$(CC) $(OFLAG) $(E_REPORT) $(L_REPORT_M) $(LCGICC) $(LMYSQL)
 
 # ====================================================================
 # 	Clean .o, .html files
