class detail I/P file

--- a/bakaplan/input/class-detail-1.in
+++ b/bakaplan/input/class-detail-1.in
@@ -2,15 +2,24 @@
 Information Technology
 3
 IT 101
+SAD
 IT 102
+EVS
 IT 103
+NOS
 Comp. Science
 3
 CS 101
+MIS
 IT 102
+SAD
 IT 103
+NOS
 Mech. Engg.
 3
 ME 101
+ME Sub. Name
 ME 200
+Me Sub Name 2
 CS 101
+MIS
