RoomDetail format changed, rooms details for each day in datesheet

--- a/bakaplan/input/room-detail-1.in
+++ b/bakaplan/input/room-detail-1.in
@@ -1,3 +1,42 @@
+3
+2
+centre 1
+4
+room 1
+8 6
+room 2
+8 6
+room 3
+8 6
+room 4
+8 6
+centre 2
+3
+room 1
+8 6
+room 2
+8 6
+room 3
+8 6
+2
+centre 1
+4
+room 1
+8 6
+room 2
+8 6
+room 3
+8 6
+room 4
+8 6
+centre 2
+3
+room 1
+8 6
+room 2
+8 6
+room 3
+8 6
 2
 centre 1
 4
