--- a/bakaplan/input/exam-detail-1.in
+++ b/bakaplan/input/exam-detail-1.in
@@ -1,3 +1,12 @@
+3
+Examination Name
+M - Session
+9:30 am - 12:30 pm
+Venue : MBA Block
+Examination Name
+M - Session
+9:30 am - 12:30 pm
+Venue : MBA Block
 Examination Name
 M - Session
 9:30 am - 12:30 pm
