validation.html target modified

--- a/frontend/src/Makefile
+++ b/frontend/src/Makefile
@@ -131,7 +131,7 @@ $(ROOM)$(MAIN)$(O) : $(D_ROOM_M)
 $(STRATEGY)$(MAIN)$(O) : $(D_STRATEGY_M)
 	$(CXX) $(CFLAG) $(STRATEGY)$(MAIN)$(CPP) $(LMYSQL)
 
-$(VALIDATION)$(MAIN)$(O) : $(D_LOGOUT_M)
+$(VALIDATION)$(MAIN)$(O) : $(D_VALIDATION_M)
 	$(CXX) $(CFLAG) $(VALIDATION)$(MAIN)$(CPP) $(LMYSQL)
 
 $(REPORT)$(MAIN)$(O) : $(D_REPORT_M)
