--- a/frontend/src/Makefile
+++ b/frontend/src/Makefile
@@ -25,7 +25,7 @@ include Make.common
 #   Targets
 # ====================================================================
 
-all: back $(F_BP)$(LOGIN)$(HTML) $(F_BP)$(REGISTER)$(HTML) $(F_BP)$(RESET)$(HTML) $(F_BP)$(NEWUSER)$(HTML) $(F_BP)$(CONFIRM)$(HTML) $(F_BP)$(ADDUSER)$(HTML) $(F_BP)$(PROJECT)$(HTML) $(F_BP)$(LOGOUT)$(HTML) $(F_BP)$(CLASS)$(HTML) $(F_BP)$(ROLLNO)$(HTML) $(F_BP)$(DATESHEET)$(HTML) $(F_BP)$(EXAM)$(HTML) $(F_BP)$(ROOM)$(HTML) $(F_BP)$(STRATEGY)$(HTML) $(F_BP)$(VALIDATION)$(HTML) $(F_BP)$(REPORT)$(HTML)
+all: back $(F_BP)$(LOGIN)$(HTML) $(F_BP)$(REGISTER)$(HTML) $(F_BP)$(RESET)$(HTML) $(F_BP)$(NEWUSER)$(HTML) $(F_BP)$(CONFIRM)$(HTML) $(F_BP)$(ADDUSER)$(HTML) $(F_BP)$(PROJECT)$(HTML) $(F_BP)$(LOGOUT)$(HTML) $(F_BP)$(CLASS)$(HTML) $(F_BP)$(ROLLNO)$(HTML) $(F_BP)$(DATESHEET)$(HTML) $(F_BP)$(EXAM)$(HTML) $(F_BP)$(ROOM)$(HTML) $(F_BP)$(STRATEGY)$(HTML) $(F_BP)$(VALIDSTRATEGY)$(HTML) $(F_BP)$(REPORT)$(HTML)
 
 back:
 	make -C backend
@@ -83,8 +83,8 @@ $(ROOM)$(O) : $(D_ROOM)
 $(STRATEGY)$(O) : $(D_STRATEGY)
 	$(CXX) $(CFLAG) $(STRATEGY)$(CC) $(LMYSQL)
 
-$(VALIDATION)$(O) : $(D_VALIDATION)
-	$(CXX) $(CFLAG) $(VALIDATION)$(CC) $(LMYSQL)
+$(VALIDSTRATEGY)$(O) : $(D_VALIDSTRATEGY)
+	$(CXX) $(CFLAG) $(VALIDSTRATEGY)$(CC) $(LMYSQL)
 
 $(REPORT)$(O) : $(D_REPORT)
 	$(CXX) $(CFLAG) $(REPORT)$(CC) $(LMYSQL)
@@ -133,8 +133,8 @@ $(ROOM)$(MAIN)$(O) : $(D_ROOM_M)
 $(STRATEGY)$(MAIN)$(O) : $(D_STRATEGY_M)
 	$(CXX) $(CFLAG) $(STRATEGY)$(MAIN)$(CPP) $(LMYSQL)
 
-$(VALIDATION)$(MAIN)$(O) : $(D_VALIDATION_M)
-	$(CXX) $(CFLAG) $(VALIDATION)$(MAIN)$(CPP) $(LMYSQL)
+$(VALIDSTRATEGY)$(MAIN)$(O) : $(D_VALIDSTRATEGY_M)
+	$(CXX) $(CFLAG) $(VALIDSTRATEGY)$(MAIN)$(CPP) $(LMYSQL)
 
 $(REPORT)$(MAIN)$(O) : $(D_REPORT_M)
 	$(CXX) $(CFLAG) $(REPORT)$(MAIN)$(CPP) $(LMYSQL)
@@ -197,8 +197,8 @@ $(F_BP)$(STRATEGY)$(HTML) : $(L_STRATEGY)
 	$(CXX) $(OFLAG) $(F_BP)$(STRATEGY)$(HTML) $(L_STRATEGY) \
 	$(LMYSQL) $(LCGICC) $(LSMTP)
 
-$(F_BP)$(VALIDATION)$(HTML) : $(L_VALIDATION)
-	$(CXX) $(OFLAG) $(F_BP)$(VALIDATION)$(HTML) $(L_VALIDATION) \
+$(F_BP)$(VALIDSTRATEGY)$(HTML) : $(L_VALIDSTRATEGY)
+	$(CXX) $(OFLAG) $(F_BP)$(VALIDSTRATEGY)$(HTML) $(L_VALIDSTRATEGY) \
 	$(LMYSQL) $(LCGICC) $(LSMTP)
 
 $(F_BP)$(REPORT)$(HTML) : $(L_REPORT)
