--- a/frontend/src/Makefile
+++ b/frontend/src/Makefile
@@ -216,7 +216,7 @@ $(F_BP)$(STRATEGY)$(HTML) : $(L_STRATEGY)
 
 $(F_BP)$(VALIDSTRATEGY)$(HTML) : $(L_VALIDSTRATEGY)
 	$(CXX) $(OFLAG) $(F_BP)$(VALIDSTRATEGY)$(HTML) $(L_VALIDSTRATEGY) \
-	$(LMYSQL) $(LCGICC) $(LSMTP)
+	$(LMYSQL) $(LCGICC) $(LSMTP) $(LHPDF)
 
 $(F_BP)$(REPORT)$(HTML) : $(L_REPORT)
 	$(CXX) $(OFLAG) $(F_BP)$(REPORT)$(HTML) $(L_REPORT) \
