--- a/src/cpp/frontend/Makefile
+++ b/src/cpp/frontend/Makefile
@@ -25,7 +25,7 @@ include Make.common
 #   Targets
 # ====================================================================
 
-all: $(F_BP)$(SIGNUP) $(F_BP)$(LOGIN) $(F_BP)$(CONFIRM) input_detail.o project_detail.o page_structure.o
+all: $(F_BP)$(SIGNUP) $(F_BP)$(LOGIN) $(F_BP)$(CONFIRM) $(F_BP)$(BAKAPLAN)
 
 #	Target for compiling .cc or .cpp files
 
@@ -56,6 +56,9 @@ $(PAGESTRUCTURE)$(O) : $(D_PAGESTRUCTURE)
 $(PROJECTDETAIL)$(O) : $(D_PROJECTDETAIL)
 	$(CXX) $(CFLAG) $(PROJECTDETAIL)$(CC) $(LMYSQL) $(LCGICC)
 
+$(BAKAPLAN)$(O) : $(D_BAKAPLAN)
+	$(CXX) $(CFLAG) $(BAKAPLAN)$(CC) $(LMYSQL) $(LCGICC)
+
 #	Targets for compiling cpp file(main files)
 
 $(SIGNUP)$(MAIN)$(O) : $(D_M_SIGNUP)
@@ -66,6 +69,9 @@ $(LOGIN)$(MAIN)$(O) : $(D_M_LOGIN)
 
 $(CONFIRM)$(MAIN)$(O) : $(D_M_CONFIRM)
 	$(CXX) $(CFLAG) $(CONFIRM)$(MAIN)$(CPP) $(LMYSQL)
+
+$(BAKAPLAN)$(MAIN)$(O) : $(D_M_BAKAPLAN)
+	$(CXX) $(CFLAG) $(BAKAPLAN)$(MAIN)$(CPP) $(LMYSQL)
 
 #	Targets for html pages
 
@@ -79,6 +85,10 @@ $(F_BP)$(LOGIN) : $(L_LOGIN)
 
 $(F_BP)$(CONFIRM) : $(L_CONFIRM)
 	$(CXX) $(OFLAG) $(F_BP)$(CONFIRM) $(L_CONFIRM) $(LSMTP) \
+	$(LMYSQL) $(LCGICC)
+
+$(F_BP)$(BAKAPLAN) : $(L_BAKAPLAN)
+	$(CXX) $(OFLAG) $(F_BP)$(BAKAPLAN) $(L_BAKAPLAN) $(LSMTP) \
 	$(LMYSQL) $(LCGICC)
 
 $(CLEAN) : 
