Added 2 files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ src/backend/*.o
 *.html
 *.orig
 frontend/src/backend/main
+frontend/src/header/sendmail-detail.h
+frontend/src/header/database-detail.h
